<resources>
    <string name="app_name">YADA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register with Email</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_failed">"Login failed"</string>
    <string name="default_web_client" translatable="false">891929709408-1qivi9tr5d9o50ff3tfqdvlsj2b7nkd0.apps.googleusercontent.com</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="login_back">Login</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="page_title" />
    <string name="start_a_diary"><b>Start a Diary!</b></string>
    <string name="no_result"><b>No result found</b></string>
    <string name="create_a_new_diary"><b>Create a new diary</b></string>
    <string name="change_password"><b>Change Password</b></string>
    <string name="change_e_mail"><b>Change E-mail</b></string>
    <string name="translate"><b>Translate</b></string>
    <string name="settings"><b>Settings</b></string>
    <string name="customize"><b>Customize</b></string>
    <string name="security"><b>Security</b></string>
    <string name="delete_string"><b>Are you sure you want to delete your account?</b></string>
    <string name="feedback"><b>Feedback</b></string>
    <string name="weather"><b>Weather</b></string>
    <string name="travel_guides_and_stories"><b>Travel Guides and Stories</b></string>


</resources>