<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecd0bc"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/peachpatch"
        app:layout_constraintBottom_toTopOf="@id/peach2"
        app:layout_constraintEnd_toEndOf="@id/peach4"
        app:layout_constraintStart_toStartOf="@id/peach3"
        app:layout_constraintTop_toTopOf="@id/peach1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeprint"
        android:text="SIGN IN"
        android:textColor="#122a5b"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peach1"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/prompt_email"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:boxStrokeColor="@color/primary"
        app:counterMaxLength="100"
        android:textColorHint="#122a5b"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:scrollHorizontally="false"
            android:maxLength="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/prompt_password"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:imeActionLabel="@string/action_sign_in_short"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/user"
        app:counterMaxLength="25"

        android:imeOptions="actionDone"
        android:textColorHint="#122a5b"
        app:boxStrokeColor="@color/primary"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:scrollHorizontally="false"
            android:maxLength="25"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button

        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:shadowColor="@color/primary"
        android:layout_marginEnd="48dp"

        android:text="@string/login_back"
        app:layout_constraintBottom_toBottomOf="@id/peach2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_again"
        app:layout_constraintVertical_bias="0.584" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="3dp"
        app:layout_constraintTop_toTopOf="@id/peach2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:layout_editor_absoluteX="16dp" />

    <Button
        android:id="@+id/login_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

</androidx.constraintlayout.widget.ConstraintLayout>