<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".auth.NewSignUp">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_one"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Name"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:boxStrokeColor="@color/primary"
        app:layout_constraintBottom_toTopOf="@id/email_new_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginEnd="@dimen/_24sdp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_one_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/nav_rail_style"
            android:textSize="@dimen/_13sdp"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_new_user"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:boxStrokeColor="@color/primary"
        app:counterMaxLength="100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:textAppearance="@style/nav_rail_style"
            android:textSize="@dimen/_13sdp"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_new_pass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:boxStrokeColor="@color/primary"
        app:counterMaxLength="25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/email_new_user"
        app:passwordToggleEnabled="true"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textAppearance="@style/nav_rail_style"
            android:textSize="@dimen/_13sdp"
            android:maxLength="25"
            android:scrollHorizontally="false" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/email_new_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:textAppearance="@style/nav_rail_style"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email_new_pass"
        app:layout_constraintVertical_bias="0.499" />

</androidx.constraintlayout.widget.ConstraintLayout>