<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ecd0bc"
    android:paddingLeft="@dimen/fragment_horizontal_margin"
    android:paddingTop="@dimen/fragment_vertical_margin"
    android:paddingRight="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        android:src="@drawable/peachpatch"
        app:layout_constraintBottom_toTopOf="@id/peach2"
        app:layout_constraintEnd_toEndOf="@id/peach4"
        app:layout_constraintStart_toStartOf="@id/peach3"
        app:layout_constraintTop_toTopOf="@id/peach1"
      />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/peach4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeprint"
        android:text="SIGN IN"
        android:textColor="#122a5b"
        android:textSize="@dimen/_40sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peach1"/>



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/prompt_email"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_150sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        app:boxStrokeColor="@color/primary"
        app:counterMaxLength="100"
        android:textColorHint="#122a5b"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            android:scrollHorizontally="false"
            android:maxLength="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"

            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:selectAllOnFocus="true"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/prompt_password"
        android:layout_marginStart="@dimen/_24sdp"
        android:layout_marginTop="@dimen/_22sdp"
        android:layout_marginEnd="@dimen/_24sdp"
        android:imeActionLabel="@string/action_sign_in_short"
        app:layout_constraintTop_toBottomOf="@+id/user"
app:counterMaxLength="25"

        android:imeOptions="actionDone"
        android:textColorHint="#122a5b"
        app:boxStrokeColor="@color/primary"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:scrollHorizontally="false"
            android:maxLength="25"

             />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:background="@color/primary"
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:shadowColor="@color/primary"
        android:layout_marginEnd="48dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:layout_constraintBottom_toBottomOf="@id/peach2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
       />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/pass"
        app:layout_constraintStart_toStartOf="@+id/pass"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />




</androidx.constraintlayout.widget.ConstraintLayout>